feat: update language support to Portuguese and add marital status and customer type enums, steps and more

--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -33,6 +33,28 @@
       "pt": "Idioma"
     }
   },
+  "cpcv": {
+    "contacts": {
+      "maritalStatus": {
+        "single": {
+          "en": "Single",
+          "pt": "Solteiro"
+        },
+        "married": {
+          "en": "Married",
+          "pt": "Casado"
+        },
+        "divorced": {
+          "en": "Divorced",
+          "pt": "Divorciado"
+        },
+        "widowed": {
+          "en": "Widowed",
+          "pt": "Viúvo"
+        }
+      }
+    }
+  },
   "auth": {
     "register": {
       "title": {
