feat: implement contract management features including creation, listing, and HTML content storage; update sidebar and translations for contracts; enhance UI components with new drawer and tab functionalities

--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -14,13 +14,21 @@
     }
   },
   "sidebar": {
+    "settings": {
+      "en": "Settings",
+      "pt": "Definições"
+    },
+    "wallet": {
+      "en": "Wallet",
+      "pt": "Carteira"
+    },
     "cpcv": {
       "en": "CPCV",
       "pt": "CPCV"
     },
-    "create": {
-      "en": "Create",
-      "pt": "Criar"
+    "contracts": {
+      "en": "Contracts",
+      "pt": "Contractos"
     },
     "contacts": {
       "en": "Contacts",
